--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -9,3 +9,11 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=flutter_golang_tchat_db
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 1234:1234
+    depends_on:
+      - postgres
